--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "express-session": "^1.18.0",
     "md5": "^2.3.0",
     "mysql": "^2.18.1"
   }
